[package]
name = "bevy-quadtree"
version = "0.1.0"
edition = "2021"

# [workspace]
# resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
# remove "dynamic_linking" for release
bevy = { version = "0.15.2", features = ["dynamic_linking"] }

# Physics Engine
# avian2d = { version = "0.2.1" }

# add this to improve when running
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[profile.dev]
opt-level = 1 # 1级优化

[profile.dev.package."*"]
opt-level = 3 # 依赖3级优化

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
