[package]
name = "main"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "quadtree"]
resolver = "2"              # Important! wgpu/Bevy needs this!

[workspace.dependencies]
# remove "dynamic_linking" for release
bevy = { version = "0.15.2", features = ["dynamic_linking", "bevy_dev_tools"] }

# Physics Engine
# avian2d = { version = "0.2.1" }

# add this to improve when running
log = { version = "0.4.26", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

rand = { version = "0.9.0" }

[dependencies]
bevy = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

quadtree = { path = "quadtree" }

[profile.dev]
opt-level = 1 # 1级优化

[profile.dev.package."*"]
opt-level = 3 # 依赖3级优化

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
